@startuml

title __MODEL's Class Diagram__\n


    namespace odel {
      class model.ChrisrmasTreeImpl {
          + draw()
      }
    }

  


    namespace odel {
      interface model.ChristmasTree {
          {abstract} + draw()
      }
    }

  


    namespace odel {
      class model.Girland {
          + circle : Circle[]
          + Girland()
          + draw()
          - drawWithGirland()
      }
    }

  


    namespace odel {
      class model.Present {
          + Present()
          + draw()
          - drawWithPresent()
      }
    }

    namespace odel {
      class model.Star {
          + Star()
          + draw()
          - drawStar()
      }
    }

    namespace odel {
      class model.TreeDecorator {
          + TreeDecorator()
          + draw()
      }
    }
  

  model.ChrisrmasTreeImpl .up.|> model.ChristmasTree
  model.Girland -up-|> model.TreeDecorator
  model.Present -up-|> model.TreeDecorator
  model.Star -up-|> model.TreeDecorator
  model.TreeDecorator .up.|> model.ChristmasTree
  model.TreeDecorator o-- model.ChristmasTree : tree


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
